[package]
name = "debounce-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"]}
futures = "0.3.30"
pin-project-lite = "0.2.14"
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
